# mshtbot

./: LICENSE  README.md  pyproject.toml
examples/: llmbot.py  testbot.py
