[tool.poetry]
name = "mshtbot"
version = "0.1.0"
description = "Meshtastic bot scripts"
authors = ["!!Dean <dwhall256@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
meshtastic = "^2.3"
ollama = "^0.2"
pubsub = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
